--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
@@ -10,11 +10,40 @@ body {
 
 #wrapper {
     height: 100%;
-    width: 80%;
+    width: 70%;
+
+    min-width: 800px;
+    min-height: 600px;
 
     margin: 0 auto;
 
     background-color: gainsboro;
+
+}
+
+#app {
+    width: 800px;
+    height: 600px;
+
+    padding: 0;
+    margin: 0 auto;
+
+    background-color: goldenrod;
+}
+
+#start{
+    width: 350px;
+    margin: 0 auto;
+}
+
+#logo{
+    width:500px;
+    height: 300px;
+}
+
+.centered {
+    display: block;
+    margin: 0 auto;
 }
 
 h1 {
