--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,11 +43,15 @@ body {
 #title {
     width: 200px;
     height: 150px;
+
+    line-height: 150px;
 }
 
 #question {
     width:500px;
     height: 300px;
+
+    line-height: 300px;
 }
 
 .centered {
