--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,23 +3,28 @@ html {
 }
 
 body {
-    background-color: rgb(51, 51, 51);
+    /* background-color: rgb(51, 51, 51); */
+    background-image: linear-gradient(rgb(88, 88, 88), rgb(100, 0, 214),rgb(66, 198, 221));
+    
+}
+
+button {
+    font-size: 16pt;
 }
 
 #wrapper {
     width: 70%;
-    height: 600px;
-
-    min-width: 800px;
-    min-height: 600px;
+    height: 100%;
+    min-width: 820px;
     
     padding: 25px 0;
     margin: 50px auto;
 
-    background-color: gainsboro;
+    /* background-color: rgba(0, 0, 0, 0.644); */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.700), rgba(0, 0, 0, 0.664), rgb(0, 0, 0, 700));
 
-    position: absolute;
-    left: 0; right: 0;
+
+    position: relative;
 }
 
 #app {
@@ -29,15 +34,15 @@ body {
     min-width: 600px;
     min-height: 450px;
 
-    background-color: goldenrod;
+    background-color: rgb(141, 141, 141);
     
+    border: solid 5px rgb(51, 51, 51);
 
     margin: 0 auto;
-    position: absolute;
+    position: relative;
     left: 0; right: 0;
-
-
 }
+
 
 #start-btn {
     width: 350px;
@@ -48,19 +53,16 @@ body {
     left: 0; right: 0;
 }
 
-#title {
-    width: 200px;
-    height: 100px;
-
-    line-height: 250px;
-}
-
 #question-container {
-    width: 500px;
-    /* height: 300px; */
-    
+    width: 90%;
+    height: 250px;
+
+    background-color: gainsboro;
+
+    word-wrap: break-word;
+
     position: absolute;
-    top: 0;
+    top: 20px;
     left: 0; right: 0;
 }
 
@@ -71,21 +73,34 @@ body {
 }
 
 #question {
-    line-height: 300px;
+    line-height: 180px;
 }
 
-/* #answer {
-    width: 800px;
-    height: 600px;
+#timer{
+    text-align: center;
+}
 
-    min-width: 600px;
-    min-height: 450px;
+#timer-container{
+    width: 100%;
 
-    padding: 0;
     margin: 0 auto;
 
-    background-color: rgba(0, 0, 0, 0.384);
-} */
+    position: absolute;
+    bottom: 350px;
+    left: 0; right: 0;
+}
+
+#progress-bar{
+    width: 100%;
+    height: 20px;
+
+    background-color: rgb(255, 27, 27);
+    /* background-color: rgb(122, 0, 221); */
+
+    position: absolute;
+    bottom: 300px;
+    left: 0;
+}
 
 #answer-img {
     width: 400;
@@ -94,7 +109,7 @@ body {
     margin: 0 auto;
 
     position: absolute;
-    bottom: 150px;
+    bottom: 125px;
     left: 0; right: 0;
 }
 
