--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ button {
 
 #wrapper {
     width: 70%;
-    height: 100%;
     min-width: 820px;
     
     padding: 25px 0;
@@ -28,8 +27,8 @@ button {
 }
 
 #app {
-    width: 800px;
-    height: 600px;
+    width: 1000px;
+    height: 700px;
 
     min-width: 600px;
     min-height: 450px;
@@ -100,6 +99,20 @@ button {
     position: absolute;
     bottom: 300px;
     left: 0;
+
+    z-index: 1;
+}
+
+#progress-bar-background{
+    width: 100%;
+    height: 20px;
+
+    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(122, 0, 221); */
+
+    position: absolute;
+    bottom: 300px;
+    left: 0;
 }
 
 #answer-img {
@@ -107,6 +120,8 @@ button {
     height: 300;
     
     margin: 0 auto;
+
+    z-index: 2;
 
     position: absolute;
     bottom: 125px;
